kubernetes/overlays/homelab/otterwiki/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: otterwiki

spec:
  template:
    spec:
      volumes:
        - name: deploy-key
          secret:
            secretName: otterwiki-deploy-key
            defaultMode: 0400
