kubernetes/overlays/homelab/otterwiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: otterwiki
  namespace: otterwiki

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: otterwiki
      port:
        number: 80
  tls:
    - hosts:
        - wiki
